--- a/templates/apply_for_surgery.html
+++ b/templates/apply_for_surgery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>sign in</title>
-	<link rel="stylesheet" type="text/css" href="apply.css">
+	<link rel="stylesheet" type="text/css" href="/static/apply.css">
 </head>
  
 <body>
