--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Welcome</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
-    <link rel="stylesheet" type="text/css" href="Test.css">
+    <link rel="stylesheet" type="text/css" href="/static/Test.css">
 	</head>
     <body>
     	<br><br>
