--- a/templates/patient_id.html
+++ b/templates/patient_id.html
@@ -3,7 +3,7 @@
 
 	<head>
   		 <title>search for a patient </title>
-  		 <link rel="stylesheet" type="text/css" href="patient_id.css">
+  		 <link rel="stylesheet" type="text/css" href="/static/patient_id.css">
   		 <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
