--- a/templates/patients_data.html
+++ b/templates/patients_data.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <title> Patients data</title>
- <link rel="stylesheet" type="text/css" href="Patients_data.css">
+ <link rel="stylesheet" type="text/css" href="/static/Patients_data.css">
 </head>
 <body>
 
