--- a/templates/Sign-in.html
+++ b/templates/Sign-in.html
@@ -4,7 +4,7 @@
 	<title>sign in</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
-	<link rel="stylesheet" type="text/css" href="Sign_in.css">
+	<link rel="stylesheet" type="text/css" href="/static/Sign_in.css">
 </head>
  
 <body>
