--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Doctors</title>
-        <link rel="stylesheet" type="text/css" href="stlyledoc.css">
+        <link rel="stylesheet" type="text/css" href="/static/stlyledoc.css">
       </head>
 <body>
     <h1> Welcome doctor .....</h1>
@@ -10,7 +10,7 @@
     <div class="contain1" >
 
        <a href="surgeryrequest.html">
-		<img class="A" src="apply_for_surgery.png"></a>
+		<img class="A" src="/static/apply_for_surgery.png"></a>
      <div class="overlay">Apply for a surgery </div>
 
 </div>
@@ -19,7 +19,7 @@
 <div class="contain2" >
 
        <a href="myschedual.html">
-        <img class="B" src="my_surgeries_schedual.jpg"></a>
+        <img class="B" src="/static/my_surgeries_schedual.jpg"></a>
      <div class="overlay">Your schedual</div>
 
 </div>
@@ -27,7 +27,7 @@
 <div class="contain3" >
 
        <a href="patient_id.html">
-        <img class="C" src="patients.jpg"></a>
+        <img class="C" src="/static/patients.jpg"></a>
      <div class="overlay">Patients information </div>
 
 </div>
