--- a/templates/surgeryrequest.html
+++ b/templates/surgeryrequest.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesurgery.css">
+    <link rel="stylesheet" type="text/css" href="/static/stylesurgery.css">
     
   </head>
   <body>
