--- a/static/css/apply.css
+++ b/static/css/apply.css
@@ -5,7 +5,9 @@ body {
   background-attachment: fixed;
   background-size:100% 100%;
 
-
+}
+form{
+  margin-left: 700px; 
 
 }
 h1 {
@@ -16,7 +18,7 @@ h1 {
    margin: 50px;
 }
 h2 {
-
+  margin-left: 200px;
   color: darkcyan;
   font-size:40px;
 text-align: center;
@@ -25,10 +27,31 @@ transform: translate(-10%, 0%);
 }
 
 .f1{
-	text-align: center;
+	text-align: left;
 	transform: translate(-10%, 0%);
 	 box-sizing: border-box;
 	 
+}
+.b4{
+
+position: absolute;
+left:1200px;
+bottom: 450px;
+background-color:darkcyan;
+border: none;
+color: white;
+padding: 15px 20px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 20px;
+margin: 4px 2px;
+cursor: pointer;
+width: 145px;
+}
+button:hover {
+background-color:black;
+color:darkcyan;
 }
 
 .A{
@@ -38,9 +61,7 @@ transform: translate(-10%, 0%);
    color: darkcyan;
 }
 .B{
- 
-  
-  transform: translate(15%, 10%); 
+  transform: translate(43%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -53,18 +74,22 @@ transform: translate(-10%, 0%);
   cursor: pointer;
   border-radius: 10px;
 }
-
 .C{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
+  transform: translate(21%); 
+  background-color:lightsteelblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .D{
- 
-  
-  transform: translate(15%, 20%); 
+  transform: translate(21%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -78,16 +103,21 @@ transform: translate(-10%, 0%);
   border-radius: 10px;
 }
 .E{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
+  transform: translate(52%); 
+  background-color:lightsteelblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .F{
- 
-  
-  transform: translate(0%, 20%); 
+  transform: translate(35%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -101,16 +131,21 @@ transform: translate(-10%, 0%);
   border-radius: 10px;
 }
 .G{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
+  transform: translate(25%); 
+  background-color:lightsteelblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .H{
- 
-  
-  transform: translate(0%, 20%); 
+  transform: translate(5%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -124,16 +159,35 @@ transform: translate(-10%, 0%);
   border-radius: 10px;
 }
 .I{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
+  transform: translate(4%); 
+  background-color:lightsteelblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.L{
+  transform: translate(4%); 
+  background-color:lightsteelblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .J{
- 
-  
-  transform: translate(0%, 20%); 
+  transform: translate(29%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -147,62 +201,7 @@ transform: translate(-10%, 0%);
   border-radius: 10px;
 }
 .K{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
-}
-.L{
- 
-  
-  transform: translate(0%, 20%); 
-  background-color:lightsteelblue;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 10px;
-}
-.M{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
-}
-.N{
- 
-  
-  transform: translate(0%, 20%); 
-  background-color:lightsteelblue;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 10px;
-}
-.x{
-	transform: translate(-5%, 40%);
-   font-size:40px;
-   margin: 20px;
-   
-    color: darkcyan;
-}
-.y{
- 
-  
-  transform: translate(0%, 20%); 
+  transform: translate(29%); 
   background-color:lightsteelblue;
   border: none;
   color: white;
@@ -218,8 +217,8 @@ transform: translate(-10%, 0%);
 
 .Z{
 
-  transform: translate(100%, 50%);
-  
+  transform: translate(170%, 170%);
+
   background-color: darkcyan;
   border: none;
   color:lightsteelblue;
