--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>Doctors</title>
-        <link rel="stylesheet" type="text/css" href="/static/stlyledoc.css">
-      </head>
+        <link rel="stylesheet" href="{{url_for('static' ,filename='css/stlyledoc.css')}}">   
+    </head>
 <body>
     <h1> Welcome doctor .....</h1>
+         <a href="{{url_for('LogOut')}}"> <button class="b5"   type="button"  >Log Out   </button> </a>
+
+<br><br>
+{% if message%}
+      <div class="alert alert-success" role="alert">
+        {{message}}
+      </div>
+    {% endif %}
 
     <div class="contain1" >
 
-       <a href="surgeryrequest.html">
-		<img class="A" src="/static/apply_for_surgery.png"></a>
+       <a href="{{url_for('applyforsurgery')}}">
+		<img class="A" src="static/css/apply_for_surgery.png"></a>
      <div class="overlay">Apply for a surgery </div>
-
-</div>
-
-
-<div class="contain2" >
-
-       <a href="myschedual.html">
-        <img class="B" src="/static/my_surgeries_schedual.jpg"></a>
-     <div class="overlay">Your schedual</div>
 
 </div>
 		
 <div class="contain3" >
 
-       <a href="patient_id.html">
-        <img class="C" src="/static/patients.jpg"></a>
+       <a href="{{url_for('patientinfo')}}">
+        <img class="C" src="static/css/patients.jpg"></a>
      <div class="overlay">Patients information </div>
+
+</div>
+<div class="contain2" >
+
+       <a href="{{url_for('findrooms')}}">
+        <img class="B" src="static/css/my_surgeries_schedual.jpg"></a>
+     <div class="overlay">OR Rooms schedual</div>
 
 </div>
 
 
       
-	<a href="Sign-in.html" ><button class="E"   type="button"  >Back </button> </a>
+	<a href="{{url_for('signin')}}"><button class="Z"   type="button"  >Back </button> </a>
         
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
 
 </body>
 </html>
