--- a/templates/patients_data.html
+++ b/templates/patients_data.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Patients data</title>
- <link rel="stylesheet" type="text/css" href="/static/Patients_data.css">
-</head>
-<body>
+        <style>
+          table, th, td {
+          padding: 10px;
+          border: 1px solid black; 
+          border-collapse: collapse;
+          }
+        </style>
+         <title>search for a patient </title>
+          <link rel="stylesheet" href="{{url_for('static' ,filename='css/patient_id.css')}}">
+         <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    </head>
+    <body>
 
-<table style="width:100%" id="Patients">
+        <h1>View patients information </h1>
+
+    <table bgcolor="white">
+       <tr>
+          {% for r in data.header %}
+          <td>{{ r  }}</td>
+          {% endfor %}
+       </tr>
+       {% for r in data.rec %}
+       <tr>
+          {% for l in r%}
+            <td> {{ l }}</td>
+          {% endfor %}
+       </tr>
+       {% endfor %}
+    </table>
+
+    </body>
+
+<!-- <table style="width:100%" id="Patients">
   <tr>
     <th> ID</th>
     <th>Firstname</th>
@@ -37,7 +65,5 @@
     <td></td>
   </tr> 
   
-</table>
-
-</body>
+</table> -->
 </html>
